app/javascript/mastodon/features/account_edit/modals/styles.module.scss
.wrapper {
  display: flex;
  gap: 16px;
  flex-direction: column;
  font-size: 15px;
}

.bioField {
  // Override specificity of emoji text area selector.
  &.bioField.bioField {
    min-height: 82px;
  }

  // 160px is approx the height of the modal header and footer
  max-height: calc(80vh - 160px);
}

.toggleInputWrapper {
  > div {
    padding: 12px 0;

    &:not(:first-child) {
      border-top: 1px solid var(--color-border-primary);
    }
  }
}

.field {
  padding: 12px 0;
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: auto auto;
  column-gap: 12px;
  box-sizing: border-box;
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
  touch-action: none;
}

.fieldNotFirst {
  border-top-color: var(--color-border-primary);
}

.fieldActiveUnder {
  border-bottom-color: var(--color-border-primary);
}

.fieldHandle {
  grid-row: span 2;
  padding: 8px 0;
  align-self: center;
  border-radius: 4px;
  background: var(--color-bg-secondary);
  cursor: grab;
  transition: background 0.2s ease-in-out;

  &:hover {
    background: var(--color-bg-brand-softer);
  }
}

.fieldDragging {
  cursor: grabbing;

  p {
    opacity: 0.7;
  }

  .fieldHandle {
    cursor: grabbing;
    background: var(--color-bg-brand-soft);
  }
}

.verifiedSteps {
  font-size: 15px;

  li {
    counter-increment: steps;
    padding-left: 34px;
    margin-top: 24px;
    position: relative;

    h2 {
      font-weight: 600;
    }

    &::before {
      content: counter(steps);
      position: absolute;
      left: 0;
      border: 1px solid var(--color-border-primary);
      border-radius: 9999px;
      font-weight: 600;
      padding: 4px;
      width: 16px;
      height: 16px;
      line-height: 16px;
      text-align: center;
    }
  }
}

.details {
  color: var(--color-text-secondary);
  font-size: 13px;
  margin-top: 8px;

  summary {
    cursor: pointer;
    font-weight: 600;
    list-style: none;
    margin-bottom: 8px;
    text-decoration: underline;
    text-decoration-style: dotted;
  }

  :global(.icon) {
    width: 1.4em;
    height: 1.4em;
    vertical-align: middle;
    transition: transform 0.2s ease-in-out;
  }

  &[open] :global(.icon) {
    transform: rotate(-180deg);
  }
}

